force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/ysign__Yousign_File_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Yousign File Settings</label>
    <pluralLabel>Yousign Files Settings</pluralLabel>
</CustomObject>