force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/fields/ysign__Active__c.field-meta.xml
<CustomField>
    <fullName>ysign__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>