force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/fields/ysign__Content_required__c.field-meta.xml
<CustomField>
    <fullName>ysign__Content_required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Content required</label>
    <type>Checkbox</type>
</CustomField>