force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/fields/ysign__Extra_text_2__c.field-meta.xml
<CustomField>
    <fullName>ysign__Extra_text_2__c</fullName>
    <label>Extra text 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>