force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/fields/ysign__FieldType__c.field-meta.xml
<CustomField>
    <fullName>ysign__FieldType__c</fullName>
    <label>FieldType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signature</fullName>
                <default>true</default>
                <label>Signature</label>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>