force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/fields/ysign__Files_match_regex__c.field-meta.xml
<CustomField>
    <fullName>ysign__Files_match_regex__c</fullName>
    <inlineHelpText>Files that match this regex</inlineHelpText>
    <label>Files match regex</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>