force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/fields/ysign__Font_size__c.field-meta.xml
<CustomField>
    <fullName>ysign__Font_size__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Font Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>