force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/fields/ysign__Order__c.field-meta.xml
<CustomField>
    <fullName>ysign__Order__c</fullName>
    <inlineHelpText>Used for tabIndex</inlineHelpText>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>