force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/fields/ysign__Page__c.field-meta.xml
<CustomField>
    <fullName>ysign__Page__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Page</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>