force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/fields/ysign__PDF_field_name__c.field-meta.xml
<CustomField>
    <fullName>ysign__PDF_field_name__c</fullName>
    <label>PDF Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>