force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/fields/ysign__Placeholder__c.field-meta.xml
<CustomField>
    <fullName>ysign__Placeholder__c</fullName>
    <label>Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>