force-app/main/default/objects/ysign__Yousign_File_Settings__mdt/fields/ysign__Position__c.field-meta.xml
<CustomField>
    <fullName>ysign__Position__c</fullName>
    <inlineHelpText>Format: &quot;llx,lly,urx,urx,ury&quot;
Be careful, no spaces should be inserted before or after commas.
Please use https://placeit.yousign.fr/ to get the position.</inlineHelpText>
    <label>Position</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>